// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Crosswind route renders correctly in dark theme (snapshot) 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RNCSafeAreaView
    edges={
      {
        "bottom": "additive",
        "left": "additive",
        "right": "additive",
        "top": "additive",
      }
    }
    style={
      {
        "backgroundColor": "#0A0E14",
        "flex": 1,
      }
    }
    testID="crosswind-screen"
  >
    <View
      style={
        [
          {
            "flex": 1,
            "paddingHorizontal": 16,
            "paddingVertical": 12,
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={false}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "flex": 1,
            },
            undefined,
          ]
        }
        testID="crosswind-keyboard-dismiss"
      >
        <View
          style={
            [
              {
                "alignItems": "stretch",
                "flexDirection": "column",
                "gap": 16,
                "justifyContent": "flex-start",
              },
              {
                "flex": 1,
              },
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "stretch",
                  "flexDirection": "column",
                  "gap": 12,
                  "justifyContent": "flex-start",
                },
                undefined,
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "flexWrap": "nowrap",
                    "gap": 8,
                    "justifyContent": "space-between",
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "flexWrap": "nowrap",
                      "gap": 8,
                      "justifyContent": "flex-start",
                    },
                    undefined,
                  ]
                }
              >
                <View
                  accessibilityLabel="B787 logo"
                  style={
                    {
                      "alignItems": "center",
                      "backgroundColor": "#003C36",
                      "borderRadius": 6,
                      "height": 28,
                      "justifyContent": "center",
                      "width": 28,
                    }
                  }
                  testID="crosswind-logo"
                >
                  <Text
                    allowFontScaling={true}
                    style={
                      [
                        {
                          "color": "#00C2A8",
                          "fontFamily": "Menlo",
                          "fontSize": 16,
                          "fontWeight": "500",
                          "letterSpacing": 0,
                          "lineHeight": 22,
                          "textAlign": "auto",
                        },
                        undefined,
                      ]
                    }
                  >
                    B7
                  </Text>
                </View>
                <Text
                  allowFontScaling={true}
                  style={
                    [
                      {
                        "color": "#E6EDF3",
                        "fontFamily": "System",
                        "fontSize": 16,
                        "fontWeight": "400",
                        "letterSpacing": 0,
                        "lineHeight": 22,
                        "textAlign": "auto",
                      },
                      {
                        "fontSize": 16,
                      },
                    ]
                  }
                >
                  Crosswind · Takeoff
                </Text>
              </View>
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "flexWrap": "nowrap",
                      "gap": 4,
                      "justifyContent": "flex-start",
                    },
                    undefined,
                  ]
                }
              >
                <View
                  accessibilityLabel="← Back"
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  hitSlop={8}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "alignItems": "center",
                        "borderRadius": 10,
                        "justifyContent": "center",
                        "minHeight": 44,
                        "paddingHorizontal": 10,
                        "paddingVertical": 5,
                      },
                      null,
                    ]
                  }
                  testID="crosswind-back"
                >
                  <Text
                    allowFontScaling={true}
                    style={
                      [
                        {
                          "color": "#8B949E",
                          "fontFamily": "System",
                          "fontSize": 12,
                          "fontWeight": "400",
                          "letterSpacing": 0,
                          "lineHeight": 16,
                          "textAlign": "auto",
                        },
                        {
                          "fontSize": 12,
                        },
                      ]
                    }
                  >
                    ← Back
                  </Text>
                </View>
                <View
                  accessibilityLabel="Reset"
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  hitSlop={8}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "alignItems": "center",
                        "borderRadius": 10,
                        "justifyContent": "center",
                        "minHeight": 44,
                        "paddingHorizontal": 10,
                        "paddingVertical": 5,
                      },
                      null,
                    ]
                  }
                  testID="crosswind-reset"
                >
                  <Text
                    allowFontScaling={true}
                    style={
                      [
                        {
                          "color": "#8B949E",
                          "fontFamily": "System",
                          "fontSize": 12,
                          "fontWeight": "400",
                          "letterSpacing": 0,
                          "lineHeight": 16,
                          "textAlign": "auto",
                        },
                        {
                          "fontSize": 12,
                        },
                      ]
                    }
                  >
                    Reset
                  </Text>
                </View>
              </View>
            </View>
            <View
              style={
                {
                  "backgroundColor": "rgba(255, 255, 255, 0.08)",
                  "height": 1,
                }
              }
            />
          </View>
          <RCTScrollView
            contentContainerStyle={
              {
                "flexGrow": 1,
                "paddingBottom": 0,
              }
            }
            keyboardShouldPersistTaps="always"
            showsVerticalScrollIndicator={false}
            style={
              {
                "flex": 1,
              }
            }
            testID="crosswind-scroll"
          >
            <View>
              <View
                style={
                  [
                    {
                      "alignItems": "stretch",
                      "flexDirection": "column",
                      "gap": 16,
                      "justifyContent": "flex-start",
                    },
                    undefined,
                  ]
                }
              >
                <View
                  style={
                    [
                      {
                        "alignItems": "stretch",
                        "flexDirection": "column",
                        "gap": 16,
                        "justifyContent": "flex-start",
                      },
                      undefined,
                    ]
                  }
                  testID="crosswind-input-form"
                >
                  <View
                    style={
                      [
                        {
                          "alignItems": "stretch",
                          "flexDirection": "column",
                          "gap": 4,
                          "justifyContent": "flex-start",
                        },
                        undefined,
                      ]
                    }
                  >
                    <Text
                      allowFontScaling={true}
                      style={
                        [
                          {
                            "color": "#8B949E",
                            "fontFamily": "System",
                            "fontSize": 12,
                            "fontWeight": "600",
                            "letterSpacing": 0.6,
                            "lineHeight": 16,
                            "textAlign": "auto",
                          },
                          undefined,
                        ]
                      }
                    >
                      Aircraft
                    </Text>
                    <View
                      accessibilityLabel="Aircraft"
                      accessibilityRole="radiogroup"
                      style={
                        {
                          "backgroundColor": "#11161F",
                          "borderColor": "rgba(255, 255, 255, 0.08)",
                          "borderRadius": 8,
                          "borderWidth": 1,
                          "flexDirection": "column",
                          "gap": 4,
                          "padding": 3,
                        }
                      }
                      testID="crosswind-aircraft"
                    >
                      <View
                        style={
                          {
                            "flexDirection": "row",
                            "gap": 2,
                          }
                        }
                      >
                        <View
                          accessibilityLabel="B787-8"
                          accessibilityRole="radio"
                          accessibilityState={
                            {
                              "busy": undefined,
                              "checked": undefined,
                              "disabled": false,
                              "expanded": undefined,
                              "selected": true,
                            }
                          }
                          accessibilityValue={
                            {
                              "max": undefined,
                              "min": undefined,
                              "now": undefined,
                              "text": undefined,
                            }
                          }
                          accessible={true}
                          collapsable={false}
                          focusable={true}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onResponderGrant={[Function]}
                          onResponderMove={[Function]}
                          onResponderRelease={[Function]}
                          onResponderTerminate={[Function]}
                          onResponderTerminationRequest={[Function]}
                          onStartShouldSetResponder={[Function]}
                          style={
                            [
                              {
                                "alignItems": "center",
                                "borderRadius": 4,
                                "flex": 1,
                                "justifyContent": "center",
                                "minHeight": 38,
                                "paddingHorizontal": 8,
                                "paddingVertical": 4,
                              },
                              {
                                "backgroundColor": "#00C2A8",
                              },
                              null,
                            ]
                          }
                          testID="crosswind-aircraft-b787_8"
                        >
                          <Text
                            allowFontScaling={true}
                            style={
                              [
                                {
                                  "color": "#001A17",
                                  "fontFamily": "System",
                                  "fontSize": 10,
                                  "fontWeight": "500",
                                  "letterSpacing": 0,
                                  "lineHeight": 14,
                                  "textAlign": "center",
                                },
                                undefined,
                              ]
                            }
                          >
                            B787-8
                          </Text>
                        </View>
                        <View
                          accessibilityLabel="B787-9"
                          accessibilityRole="radio"
                          accessibilityState={
                            {
                              "busy": undefined,
                              "checked": undefined,
                              "disabled": false,
                              "expanded": undefined,
                              "selected": false,
                            }
                          }
                          accessibilityValue={
                            {
                              "max": undefined,
                              "min": undefined,
                              "now": undefined,
                              "text": undefined,
                            }
                          }
                          accessible={true}
                          collapsable={false}
                          focusable={true}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onResponderGrant={[Function]}
                          onResponderMove={[Function]}
                          onResponderRelease={[Function]}
                          onResponderTerminate={[Function]}
                          onResponderTerminationRequest={[Function]}
                          onStartShouldSetResponder={[Function]}
                          style={
                            [
                              {
                                "alignItems": "center",
                                "borderRadius": 4,
                                "flex": 1,
                                "justifyContent": "center",
                                "minHeight": 38,
                                "paddingHorizontal": 8,
                                "paddingVertical": 4,
                              },
                              null,
                              null,
                            ]
                          }
                          testID="crosswind-aircraft-b787_9"
                        >
                          <Text
                            allowFontScaling={true}
                            style={
                              [
                                {
                                  "color": "#8B949E",
                                  "fontFamily": "System",
                                  "fontSize": 10,
                                  "fontWeight": "500",
                                  "letterSpacing": 0,
                                  "lineHeight": 14,
                                  "textAlign": "center",
                                },
                                undefined,
                              ]
                            }
                          >
                            B787-9
                          </Text>
                        </View>
                      </View>
                    </View>
                  </View>
                  <View
                    accessibilityState={
                      {
                        "busy": undefined,
                        "checked": undefined,
                        "disabled": false,
                        "expanded": undefined,
                        "selected": undefined,
                      }
                    }
                    accessibilityValue={
                      {
                        "max": undefined,
                        "min": undefined,
                        "now": undefined,
                        "text": undefined,
                      }
                    }
                    accessible={false}
                    collapsable={false}
                    focusable={true}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      {
                        "gap": 4,
                      }
                    }
                    testID="crosswind-weight"
                  >
                    <Text
                      allowFontScaling={true}
                      style={
                        [
                          {
                            "color": "#8B949E",
                            "fontFamily": "System",
                            "fontSize": 9,
                            "fontWeight": "600",
                            "letterSpacing": 0.54,
                            "lineHeight": 12,
                            "textAlign": "auto",
                          },
                          {
                            "textTransform": "uppercase",
                          },
                        ]
                      }
                    >
                      TOW actual
                    </Text>
                    <View
                      style={
                        {
                          "backgroundColor": "rgba(0, 194, 168, 0.2)",
                          "borderRadius": 10,
                          "padding": 0,
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "alignItems": "center",
                            "backgroundColor": "#11161F",
                            "borderColor": "rgba(255, 255, 255, 0.08)",
                            "borderRadius": 8,
                            "borderWidth": 1,
                            "flexDirection": "row",
                            "minHeight": 44,
                            "opacity": 1,
                            "paddingHorizontal": 12,
                            "paddingVertical": 8,
                          }
                        }
                      >
                        <TextInput
                          accessibilityLabel="TOW actual"
                          autoComplete="off"
                          autoCorrect={false}
                          caretHidden={true}
                          editable={false}
                          inputMode="decimal"
                          keyboardType="decimal-pad"
                          onChangeText={[Function]}
                          onSubmitEditing={[Function]}
                          placeholder="e.g. 170"
                          placeholderTextColor="#6E7681"
                          pointerEvents="none"
                          returnKeyType="done"
                          showSoftInputOnFocus={false}
                          spellCheck={false}
                          style={
                            {
                              "color": "#E6EDF3",
                              "flex": 1,
                              "fontFamily": "Menlo",
                              "fontSize": 16,
                            }
                          }
                          testID="crosswind-weight-input"
                          textContentType="none"
                          value=""
                        />
                        <Text
                          allowFontScaling={true}
                          style={
                            [
                              {
                                "color": "#6E7681",
                                "fontFamily": "Menlo",
                                "fontSize": 11,
                                "fontWeight": "400",
                                "letterSpacing": 0,
                                "lineHeight": 16,
                                "textAlign": "auto",
                              },
                              undefined,
                            ]
                          }
                        >
                          t
                        </Text>
                      </View>
                    </View>
                    <View
                      accessible={false}
                      importantForAccessibility="no-hide-descendants"
                      style={
                        {
                          "justifyContent": "flex-start",
                          "minHeight": 20,
                        }
                      }
                      testID="crosswind-weight-error-slot"
                    />
                  </View>
                  <View
                    accessibilityState={
                      {
                        "busy": undefined,
                        "checked": undefined,
                        "disabled": false,
                        "expanded": undefined,
                        "selected": undefined,
                      }
                    }
                    accessibilityValue={
                      {
                        "max": undefined,
                        "min": undefined,
                        "now": undefined,
                        "text": undefined,
                      }
                    }
                    accessible={false}
                    collapsable={false}
                    focusable={true}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      {
                        "gap": 4,
                      }
                    }
                    testID="crosswind-cg"
                  >
                    <Text
                      allowFontScaling={true}
                      style={
                        [
                          {
                            "color": "#8B949E",
                            "fontFamily": "System",
                            "fontSize": 9,
                            "fontWeight": "600",
                            "letterSpacing": 0.54,
                            "lineHeight": 12,
                            "textAlign": "auto",
                          },
                          {
                            "textTransform": "uppercase",
                          },
                        ]
                      }
                    >
                      Center of gravity
                    </Text>
                    <View
                      style={
                        {
                          "backgroundColor": "rgba(0, 194, 168, 0.2)",
                          "borderRadius": 10,
                          "padding": 0,
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "alignItems": "center",
                            "backgroundColor": "#11161F",
                            "borderColor": "rgba(255, 255, 255, 0.08)",
                            "borderRadius": 8,
                            "borderWidth": 1,
                            "flexDirection": "row",
                            "minHeight": 44,
                            "opacity": 1,
                            "paddingHorizontal": 12,
                            "paddingVertical": 8,
                          }
                        }
                      >
                        <TextInput
                          accessibilityLabel="Center of gravity"
                          autoComplete="off"
                          autoCorrect={false}
                          caretHidden={true}
                          editable={false}
                          inputMode="decimal"
                          keyboardType="decimal-pad"
                          onChangeText={[Function]}
                          onSubmitEditing={[Function]}
                          placeholder="e.g. 25.5"
                          placeholderTextColor="#6E7681"
                          pointerEvents="none"
                          returnKeyType="done"
                          showSoftInputOnFocus={false}
                          spellCheck={false}
                          style={
                            {
                              "color": "#E6EDF3",
                              "flex": 1,
                              "fontFamily": "Menlo",
                              "fontSize": 16,
                            }
                          }
                          testID="crosswind-cg-input"
                          textContentType="none"
                          value=""
                        />
                        <Text
                          allowFontScaling={true}
                          style={
                            [
                              {
                                "color": "#6E7681",
                                "fontFamily": "Menlo",
                                "fontSize": 11,
                                "fontWeight": "400",
                                "letterSpacing": 0,
                                "lineHeight": 16,
                                "textAlign": "auto",
                              },
                              undefined,
                            ]
                          }
                        >
                          %MAC
                        </Text>
                      </View>
                    </View>
                    <View
                      accessible={false}
                      importantForAccessibility="no-hide-descendants"
                      style={
                        {
                          "justifyContent": "flex-start",
                          "minHeight": 20,
                        }
                      }
                      testID="crosswind-cg-error-slot"
                    />
                  </View>
                  <View
                    style={
                      [
                        {
                          "alignItems": "stretch",
                          "flexDirection": "column",
                          "gap": 4,
                          "justifyContent": "flex-start",
                        },
                        undefined,
                      ]
                    }
                  >
                    <Text
                      allowFontScaling={true}
                      style={
                        [
                          {
                            "color": "#8B949E",
                            "fontFamily": "System",
                            "fontSize": 12,
                            "fontWeight": "600",
                            "letterSpacing": 0.6,
                            "lineHeight": 16,
                            "textAlign": "auto",
                          },
                          undefined,
                        ]
                      }
                    >
                      Runway condition
                    </Text>
                    <View
                      accessibilityLabel="Runway condition"
                      accessibilityRole="button"
                      accessibilityState={
                        {
                          "busy": undefined,
                          "checked": undefined,
                          "disabled": undefined,
                          "expanded": false,
                          "selected": undefined,
                        }
                      }
                      accessibilityValue={
                        {
                          "max": undefined,
                          "min": undefined,
                          "now": undefined,
                          "text": "Dry",
                        }
                      }
                      accessible={true}
                      collapsable={false}
                      focusable={true}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        [
                          {
                            "alignItems": "center",
                            "borderRadius": 8,
                            "borderWidth": 1,
                            "flexDirection": "row",
                            "justifyContent": "space-between",
                          },
                          {
                            "backgroundColor": "#11161F",
                            "borderColor": "rgba(255, 255, 255, 0.08)",
                            "minHeight": 44,
                            "paddingHorizontal": 16,
                            "paddingVertical": 8,
                          },
                        ]
                      }
                      testID="crosswind-runway"
                    >
                      <Text
                        allowFontScaling={true}
                        numberOfLines={1}
                        style={
                          [
                            {
                              "color": "#E6EDF3",
                              "fontFamily": "System",
                              "fontSize": 16,
                              "fontWeight": "400",
                              "letterSpacing": 0,
                              "lineHeight": 22,
                              "textAlign": "auto",
                            },
                            undefined,
                          ]
                        }
                      >
                        Dry
                      </Text>
                      <Text
                        allowFontScaling={false}
                        selectable={false}
                        style={
                          [
                            {
                              "color": "#8B949E",
                              "fontSize": 18,
                            },
                            undefined,
                            {
                              "fontFamily": "ionicons",
                              "fontStyle": "normal",
                              "fontWeight": "normal",
                            },
                            {},
                          ]
                        }
                        testID="crosswind-runway-chevron"
                      >
                        
                      </Text>
                    </View>
                  </View>
                </View>
                <View
                  layout={BaseAnimationMock {}}
                  testID="crosswind-result"
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "backgroundColor": "#11161F",
                        "borderColor": "rgba(255, 255, 255, 0.08)",
                        "borderRadius": 12,
                        "borderWidth": 1,
                        "flex": 0,
                        "gap": 8,
                        "justifyContent": "center",
                        "minHeight": 200,
                        "padding": 16,
                      }
                    }
                    testID="crosswind-result-panel-empty"
                  >
                    <Text
                      accessibilityLabel="Information"
                      allowFontScaling={false}
                      selectable={false}
                      style={
                        [
                          {
                            "color": "#6E7681",
                            "fontSize": 32,
                          },
                          undefined,
                          {
                            "fontFamily": "material",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          {},
                        ]
                      }
                    >
                      
                    </Text>
                    <View
                      style={
                        {
                          "maxWidth": 280,
                        }
                      }
                    >
                      <Text
                        allowFontScaling={true}
                        style={
                          [
                            {
                              "color": "#8B949E",
                              "fontFamily": "System",
                              "fontSize": 12,
                              "fontWeight": "400",
                              "letterSpacing": 0,
                              "lineHeight": 16,
                              "textAlign": "center",
                            },
                            undefined,
                          ]
                        }
                      >
                        Enter weight and CG to see result
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </RCTScrollView>
        </View>
      </View>
    </View>
  </RNCSafeAreaView>
</RNCSafeAreaProvider>
`;

exports[`Crosswind route renders correctly in light theme (snapshot) 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RNCSafeAreaView
    edges={
      {
        "bottom": "additive",
        "left": "additive",
        "right": "additive",
        "top": "additive",
      }
    }
    style={
      {
        "backgroundColor": "#F4F6F9",
        "flex": 1,
      }
    }
    testID="crosswind-screen"
  >
    <View
      style={
        [
          {
            "flex": 1,
            "paddingHorizontal": 16,
            "paddingVertical": 12,
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={false}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "flex": 1,
            },
            undefined,
          ]
        }
        testID="crosswind-keyboard-dismiss"
      >
        <View
          style={
            [
              {
                "alignItems": "stretch",
                "flexDirection": "column",
                "gap": 16,
                "justifyContent": "flex-start",
              },
              {
                "flex": 1,
              },
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "stretch",
                  "flexDirection": "column",
                  "gap": 12,
                  "justifyContent": "flex-start",
                },
                undefined,
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "flexWrap": "nowrap",
                    "gap": 8,
                    "justifyContent": "space-between",
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "flexWrap": "nowrap",
                      "gap": 8,
                      "justifyContent": "flex-start",
                    },
                    undefined,
                  ]
                }
              >
                <View
                  accessibilityLabel="B787 logo"
                  style={
                    {
                      "alignItems": "center",
                      "backgroundColor": "#DEF7F3",
                      "borderRadius": 6,
                      "height": 28,
                      "justifyContent": "center",
                      "width": 28,
                    }
                  }
                  testID="crosswind-logo"
                >
                  <Text
                    allowFontScaling={true}
                    style={
                      [
                        {
                          "color": "#00C2A8",
                          "fontFamily": "Menlo",
                          "fontSize": 16,
                          "fontWeight": "500",
                          "letterSpacing": 0,
                          "lineHeight": 22,
                          "textAlign": "auto",
                        },
                        undefined,
                      ]
                    }
                  >
                    B7
                  </Text>
                </View>
                <Text
                  allowFontScaling={true}
                  style={
                    [
                      {
                        "color": "#1F2937",
                        "fontFamily": "System",
                        "fontSize": 16,
                        "fontWeight": "400",
                        "letterSpacing": 0,
                        "lineHeight": 22,
                        "textAlign": "auto",
                      },
                      {
                        "fontSize": 16,
                      },
                    ]
                  }
                >
                  Crosswind · Takeoff
                </Text>
              </View>
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "flexWrap": "nowrap",
                      "gap": 4,
                      "justifyContent": "flex-start",
                    },
                    undefined,
                  ]
                }
              >
                <View
                  accessibilityLabel="← Back"
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  hitSlop={8}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "alignItems": "center",
                        "borderRadius": 10,
                        "justifyContent": "center",
                        "minHeight": 44,
                        "paddingHorizontal": 10,
                        "paddingVertical": 5,
                      },
                      null,
                    ]
                  }
                  testID="crosswind-back"
                >
                  <Text
                    allowFontScaling={true}
                    style={
                      [
                        {
                          "color": "#4B5563",
                          "fontFamily": "System",
                          "fontSize": 12,
                          "fontWeight": "400",
                          "letterSpacing": 0,
                          "lineHeight": 16,
                          "textAlign": "auto",
                        },
                        {
                          "fontSize": 12,
                        },
                      ]
                    }
                  >
                    ← Back
                  </Text>
                </View>
                <View
                  accessibilityLabel="Reset"
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  hitSlop={8}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "alignItems": "center",
                        "borderRadius": 10,
                        "justifyContent": "center",
                        "minHeight": 44,
                        "paddingHorizontal": 10,
                        "paddingVertical": 5,
                      },
                      null,
                    ]
                  }
                  testID="crosswind-reset"
                >
                  <Text
                    allowFontScaling={true}
                    style={
                      [
                        {
                          "color": "#4B5563",
                          "fontFamily": "System",
                          "fontSize": 12,
                          "fontWeight": "400",
                          "letterSpacing": 0,
                          "lineHeight": 16,
                          "textAlign": "auto",
                        },
                        {
                          "fontSize": 12,
                        },
                      ]
                    }
                  >
                    Reset
                  </Text>
                </View>
              </View>
            </View>
            <View
              style={
                {
                  "backgroundColor": "rgba(0, 0, 0, 0.08)",
                  "height": 1,
                }
              }
            />
          </View>
          <RCTScrollView
            contentContainerStyle={
              {
                "flexGrow": 1,
                "paddingBottom": 0,
              }
            }
            keyboardShouldPersistTaps="always"
            showsVerticalScrollIndicator={false}
            style={
              {
                "flex": 1,
              }
            }
            testID="crosswind-scroll"
          >
            <View>
              <View
                style={
                  [
                    {
                      "alignItems": "stretch",
                      "flexDirection": "column",
                      "gap": 16,
                      "justifyContent": "flex-start",
                    },
                    undefined,
                  ]
                }
              >
                <View
                  style={
                    [
                      {
                        "alignItems": "stretch",
                        "flexDirection": "column",
                        "gap": 16,
                        "justifyContent": "flex-start",
                      },
                      undefined,
                    ]
                  }
                  testID="crosswind-input-form"
                >
                  <View
                    style={
                      [
                        {
                          "alignItems": "stretch",
                          "flexDirection": "column",
                          "gap": 4,
                          "justifyContent": "flex-start",
                        },
                        undefined,
                      ]
                    }
                  >
                    <Text
                      allowFontScaling={true}
                      style={
                        [
                          {
                            "color": "#4B5563",
                            "fontFamily": "System",
                            "fontSize": 12,
                            "fontWeight": "600",
                            "letterSpacing": 0.6,
                            "lineHeight": 16,
                            "textAlign": "auto",
                          },
                          undefined,
                        ]
                      }
                    >
                      Aircraft
                    </Text>
                    <View
                      accessibilityLabel="Aircraft"
                      accessibilityRole="radiogroup"
                      style={
                        {
                          "backgroundColor": "#FFFFFF",
                          "borderColor": "rgba(0, 0, 0, 0.08)",
                          "borderRadius": 8,
                          "borderWidth": 1,
                          "flexDirection": "column",
                          "gap": 4,
                          "padding": 3,
                        }
                      }
                      testID="crosswind-aircraft"
                    >
                      <View
                        style={
                          {
                            "flexDirection": "row",
                            "gap": 2,
                          }
                        }
                      >
                        <View
                          accessibilityLabel="B787-8"
                          accessibilityRole="radio"
                          accessibilityState={
                            {
                              "busy": undefined,
                              "checked": undefined,
                              "disabled": false,
                              "expanded": undefined,
                              "selected": true,
                            }
                          }
                          accessibilityValue={
                            {
                              "max": undefined,
                              "min": undefined,
                              "now": undefined,
                              "text": undefined,
                            }
                          }
                          accessible={true}
                          collapsable={false}
                          focusable={true}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onResponderGrant={[Function]}
                          onResponderMove={[Function]}
                          onResponderRelease={[Function]}
                          onResponderTerminate={[Function]}
                          onResponderTerminationRequest={[Function]}
                          onStartShouldSetResponder={[Function]}
                          style={
                            [
                              {
                                "alignItems": "center",
                                "borderRadius": 4,
                                "flex": 1,
                                "justifyContent": "center",
                                "minHeight": 38,
                                "paddingHorizontal": 8,
                                "paddingVertical": 4,
                              },
                              {
                                "backgroundColor": "#00C2A8",
                              },
                              null,
                            ]
                          }
                          testID="crosswind-aircraft-b787_8"
                        >
                          <Text
                            allowFontScaling={true}
                            style={
                              [
                                {
                                  "color": "#001A17",
                                  "fontFamily": "System",
                                  "fontSize": 10,
                                  "fontWeight": "500",
                                  "letterSpacing": 0,
                                  "lineHeight": 14,
                                  "textAlign": "center",
                                },
                                undefined,
                              ]
                            }
                          >
                            B787-8
                          </Text>
                        </View>
                        <View
                          accessibilityLabel="B787-9"
                          accessibilityRole="radio"
                          accessibilityState={
                            {
                              "busy": undefined,
                              "checked": undefined,
                              "disabled": false,
                              "expanded": undefined,
                              "selected": false,
                            }
                          }
                          accessibilityValue={
                            {
                              "max": undefined,
                              "min": undefined,
                              "now": undefined,
                              "text": undefined,
                            }
                          }
                          accessible={true}
                          collapsable={false}
                          focusable={true}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onResponderGrant={[Function]}
                          onResponderMove={[Function]}
                          onResponderRelease={[Function]}
                          onResponderTerminate={[Function]}
                          onResponderTerminationRequest={[Function]}
                          onStartShouldSetResponder={[Function]}
                          style={
                            [
                              {
                                "alignItems": "center",
                                "borderRadius": 4,
                                "flex": 1,
                                "justifyContent": "center",
                                "minHeight": 38,
                                "paddingHorizontal": 8,
                                "paddingVertical": 4,
                              },
                              null,
                              null,
                            ]
                          }
                          testID="crosswind-aircraft-b787_9"
                        >
                          <Text
                            allowFontScaling={true}
                            style={
                              [
                                {
                                  "color": "#4B5563",
                                  "fontFamily": "System",
                                  "fontSize": 10,
                                  "fontWeight": "500",
                                  "letterSpacing": 0,
                                  "lineHeight": 14,
                                  "textAlign": "center",
                                },
                                undefined,
                              ]
                            }
                          >
                            B787-9
                          </Text>
                        </View>
                      </View>
                    </View>
                  </View>
                  <View
                    accessibilityState={
                      {
                        "busy": undefined,
                        "checked": undefined,
                        "disabled": false,
                        "expanded": undefined,
                        "selected": undefined,
                      }
                    }
                    accessibilityValue={
                      {
                        "max": undefined,
                        "min": undefined,
                        "now": undefined,
                        "text": undefined,
                      }
                    }
                    accessible={false}
                    collapsable={false}
                    focusable={true}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      {
                        "gap": 4,
                      }
                    }
                    testID="crosswind-weight"
                  >
                    <Text
                      allowFontScaling={true}
                      style={
                        [
                          {
                            "color": "#4B5563",
                            "fontFamily": "System",
                            "fontSize": 9,
                            "fontWeight": "600",
                            "letterSpacing": 0.54,
                            "lineHeight": 12,
                            "textAlign": "auto",
                          },
                          {
                            "textTransform": "uppercase",
                          },
                        ]
                      }
                    >
                      TOW actual
                    </Text>
                    <View
                      style={
                        {
                          "backgroundColor": "rgba(0, 194, 168, 0.2)",
                          "borderRadius": 10,
                          "padding": 0,
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "alignItems": "center",
                            "backgroundColor": "#FFFFFF",
                            "borderColor": "rgba(0, 0, 0, 0.08)",
                            "borderRadius": 8,
                            "borderWidth": 1,
                            "flexDirection": "row",
                            "minHeight": 44,
                            "opacity": 1,
                            "paddingHorizontal": 12,
                            "paddingVertical": 8,
                          }
                        }
                      >
                        <TextInput
                          accessibilityLabel="TOW actual"
                          autoComplete="off"
                          autoCorrect={false}
                          caretHidden={true}
                          editable={false}
                          inputMode="decimal"
                          keyboardType="decimal-pad"
                          onChangeText={[Function]}
                          onSubmitEditing={[Function]}
                          placeholder="e.g. 170"
                          placeholderTextColor="#6B7280"
                          pointerEvents="none"
                          returnKeyType="done"
                          showSoftInputOnFocus={false}
                          spellCheck={false}
                          style={
                            {
                              "color": "#1F2937",
                              "flex": 1,
                              "fontFamily": "Menlo",
                              "fontSize": 16,
                            }
                          }
                          testID="crosswind-weight-input"
                          textContentType="none"
                          value=""
                        />
                        <Text
                          allowFontScaling={true}
                          style={
                            [
                              {
                                "color": "#6B7280",
                                "fontFamily": "Menlo",
                                "fontSize": 11,
                                "fontWeight": "400",
                                "letterSpacing": 0,
                                "lineHeight": 16,
                                "textAlign": "auto",
                              },
                              undefined,
                            ]
                          }
                        >
                          t
                        </Text>
                      </View>
                    </View>
                    <View
                      accessible={false}
                      importantForAccessibility="no-hide-descendants"
                      style={
                        {
                          "justifyContent": "flex-start",
                          "minHeight": 20,
                        }
                      }
                      testID="crosswind-weight-error-slot"
                    />
                  </View>
                  <View
                    accessibilityState={
                      {
                        "busy": undefined,
                        "checked": undefined,
                        "disabled": false,
                        "expanded": undefined,
                        "selected": undefined,
                      }
                    }
                    accessibilityValue={
                      {
                        "max": undefined,
                        "min": undefined,
                        "now": undefined,
                        "text": undefined,
                      }
                    }
                    accessible={false}
                    collapsable={false}
                    focusable={true}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      {
                        "gap": 4,
                      }
                    }
                    testID="crosswind-cg"
                  >
                    <Text
                      allowFontScaling={true}
                      style={
                        [
                          {
                            "color": "#4B5563",
                            "fontFamily": "System",
                            "fontSize": 9,
                            "fontWeight": "600",
                            "letterSpacing": 0.54,
                            "lineHeight": 12,
                            "textAlign": "auto",
                          },
                          {
                            "textTransform": "uppercase",
                          },
                        ]
                      }
                    >
                      Center of gravity
                    </Text>
                    <View
                      style={
                        {
                          "backgroundColor": "rgba(0, 194, 168, 0.2)",
                          "borderRadius": 10,
                          "padding": 0,
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "alignItems": "center",
                            "backgroundColor": "#FFFFFF",
                            "borderColor": "rgba(0, 0, 0, 0.08)",
                            "borderRadius": 8,
                            "borderWidth": 1,
                            "flexDirection": "row",
                            "minHeight": 44,
                            "opacity": 1,
                            "paddingHorizontal": 12,
                            "paddingVertical": 8,
                          }
                        }
                      >
                        <TextInput
                          accessibilityLabel="Center of gravity"
                          autoComplete="off"
                          autoCorrect={false}
                          caretHidden={true}
                          editable={false}
                          inputMode="decimal"
                          keyboardType="decimal-pad"
                          onChangeText={[Function]}
                          onSubmitEditing={[Function]}
                          placeholder="e.g. 25.5"
                          placeholderTextColor="#6B7280"
                          pointerEvents="none"
                          returnKeyType="done"
                          showSoftInputOnFocus={false}
                          spellCheck={false}
                          style={
                            {
                              "color": "#1F2937",
                              "flex": 1,
                              "fontFamily": "Menlo",
                              "fontSize": 16,
                            }
                          }
                          testID="crosswind-cg-input"
                          textContentType="none"
                          value=""
                        />
                        <Text
                          allowFontScaling={true}
                          style={
                            [
                              {
                                "color": "#6B7280",
                                "fontFamily": "Menlo",
                                "fontSize": 11,
                                "fontWeight": "400",
                                "letterSpacing": 0,
                                "lineHeight": 16,
                                "textAlign": "auto",
                              },
                              undefined,
                            ]
                          }
                        >
                          %MAC
                        </Text>
                      </View>
                    </View>
                    <View
                      accessible={false}
                      importantForAccessibility="no-hide-descendants"
                      style={
                        {
                          "justifyContent": "flex-start",
                          "minHeight": 20,
                        }
                      }
                      testID="crosswind-cg-error-slot"
                    />
                  </View>
                  <View
                    style={
                      [
                        {
                          "alignItems": "stretch",
                          "flexDirection": "column",
                          "gap": 4,
                          "justifyContent": "flex-start",
                        },
                        undefined,
                      ]
                    }
                  >
                    <Text
                      allowFontScaling={true}
                      style={
                        [
                          {
                            "color": "#4B5563",
                            "fontFamily": "System",
                            "fontSize": 12,
                            "fontWeight": "600",
                            "letterSpacing": 0.6,
                            "lineHeight": 16,
                            "textAlign": "auto",
                          },
                          undefined,
                        ]
                      }
                    >
                      Runway condition
                    </Text>
                    <View
                      accessibilityLabel="Runway condition"
                      accessibilityRole="button"
                      accessibilityState={
                        {
                          "busy": undefined,
                          "checked": undefined,
                          "disabled": undefined,
                          "expanded": false,
                          "selected": undefined,
                        }
                      }
                      accessibilityValue={
                        {
                          "max": undefined,
                          "min": undefined,
                          "now": undefined,
                          "text": "Dry",
                        }
                      }
                      accessible={true}
                      collapsable={false}
                      focusable={true}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        [
                          {
                            "alignItems": "center",
                            "borderRadius": 8,
                            "borderWidth": 1,
                            "flexDirection": "row",
                            "justifyContent": "space-between",
                          },
                          {
                            "backgroundColor": "#FFFFFF",
                            "borderColor": "rgba(0, 0, 0, 0.08)",
                            "minHeight": 44,
                            "paddingHorizontal": 16,
                            "paddingVertical": 8,
                          },
                        ]
                      }
                      testID="crosswind-runway"
                    >
                      <Text
                        allowFontScaling={true}
                        numberOfLines={1}
                        style={
                          [
                            {
                              "color": "#1F2937",
                              "fontFamily": "System",
                              "fontSize": 16,
                              "fontWeight": "400",
                              "letterSpacing": 0,
                              "lineHeight": 22,
                              "textAlign": "auto",
                            },
                            undefined,
                          ]
                        }
                      >
                        Dry
                      </Text>
                      <Text
                        allowFontScaling={false}
                        selectable={false}
                        style={
                          [
                            {
                              "color": "#4B5563",
                              "fontSize": 18,
                            },
                            undefined,
                            {
                              "fontFamily": "ionicons",
                              "fontStyle": "normal",
                              "fontWeight": "normal",
                            },
                            {},
                          ]
                        }
                        testID="crosswind-runway-chevron"
                      >
                        
                      </Text>
                    </View>
                  </View>
                </View>
                <View
                  layout={BaseAnimationMock {}}
                  testID="crosswind-result"
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "backgroundColor": "#FFFFFF",
                        "borderColor": "rgba(0, 0, 0, 0.08)",
                        "borderRadius": 12,
                        "borderWidth": 1,
                        "flex": 0,
                        "gap": 8,
                        "justifyContent": "center",
                        "minHeight": 200,
                        "padding": 16,
                      }
                    }
                    testID="crosswind-result-panel-empty"
                  >
                    <Text
                      accessibilityLabel="Information"
                      allowFontScaling={false}
                      selectable={false}
                      style={
                        [
                          {
                            "color": "#6B7280",
                            "fontSize": 32,
                          },
                          undefined,
                          {
                            "fontFamily": "material",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          {},
                        ]
                      }
                    >
                      
                    </Text>
                    <View
                      style={
                        {
                          "maxWidth": 280,
                        }
                      }
                    >
                      <Text
                        allowFontScaling={true}
                        style={
                          [
                            {
                              "color": "#4B5563",
                              "fontFamily": "System",
                              "fontSize": 12,
                              "fontWeight": "400",
                              "letterSpacing": 0,
                              "lineHeight": 16,
                              "textAlign": "center",
                            },
                            undefined,
                          ]
                        }
                      >
                        Enter weight and CG to see result
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </RCTScrollView>
        </View>
      </View>
    </View>
  </RNCSafeAreaView>
</RNCSafeAreaProvider>
`;
